
- #8692: Remove Misc.may_map and similar
  (Leo White, review by Gabriel Scherer and Thomas Refis)

- #8677: Use unsigned comparisons in amd64 and i386 emitter of Lcondbranch3.
  (Greta Yorsh, review by Xavier Leroy)

### Code generation and optimizations:

- #8672: Optimise Switch code generation on booleans.
  (Stephen Dolan, review by Pierre Chambart)

### Runtime system:

- #8619: Ensure Gc.minor_words remains accurate after a GC.
  (Stephen Dolan, Xavier Leroy and David Allsopp,
   review by Xavier Leroy and Gabriel Scherer)

* #8711: The major GC hooks are no longer allowed to interact with the
   OCaml heap.
   (Jacques-Henri Jourdan, review by Damien Doligez)

- #8691: Allocation functions are now guaranteed not to trigger any
   OCaml callback when called from C.
   (Jacques-Henri Jourdan, review by Stephen Dolan and Gabriel Scherer)

### Standard library:

- #8657: Optimization in [Array.make] when initializing with unboxed
   or young values.
   (Jacques-Henri Jourdan, review by Gabriel Scherer and Stephen Dolan)

- #8634: Statistical memory profiling provided by the Gc.Memprof
   module.
   Incomplete version: does not sample
     - objects allocated in the minor heap in native mode,
     - objects allocated by de-marshalling.
   (Jacques-Henri Jourdan, review by Stephen Dolan, Gabriel Scherer and
    Damien Doligez)

### Other libraries:

- #1939, #2023: Implement Unix.truncate and Unix.ftruncate on Windows.
  (Florent Monnier and Nicolás Ojeda Bär, review by David Allsopp)

### Build system:

- #8650: ensure that "make" variables are defined before use;
  revise generation of config/util.ml to better quote special characters
  (Xavier Leroy, review by David Allsopp)

- #8690, #8696: avoid rebuilding the world when files containing primitives
  change.
  (Stephen Dolan, review by Gabriel Scherer, Sébastien Hinderer and
   Thomas Refis)

### Bug fixes:

- #8622: Don't generate #! headers over 127 characters.